Подключил ЧПУ. Убрал лишние пункты из меню. Изменил контент на главной странице. Создание контролеров раздела в веб интерфейсе, модель для сущностей. Создание представлений, правка стилей леяута. Внедрил виджет DatePicker для фильтрации. Внедрение pjax.

--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,3 +1,11 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+}
+
 html,
 body {
     height: 100%;
@@ -89,3 +97,16 @@ a.desc:after {
     padding: 10px 20px;
     margin: 0 0 15px 0;
 }
+
+.entity-search-form .buttons {
+    margin-left: 15px;
+}
+
+@media (min-width: 992px) {
+    .container {
+        max-width: 900px;
+    }
+}
+
+
+
